--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
+      - name: Zip Python Code
+        run: zip lambda.zip
+
       - name: Update Lambda Function
-        run: aws lambda update-function-code --function-name github-trending-scraper --zip-file fileb://deploy.zip
+        run: aws lambda update-function-code --function-name github-trending-scraper --zip-file fileb://lambda.zip
