--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,4 +27,4 @@ jobs:
         run: zip -r lambda.zip .
 
       - name: Update Lambda Function
-        run: aws lambda update-function-code --function-name github-trending-scraper --zip-file fileb://lambda.zip
+        run: aws lambda update-function-code --function-name github-trending-scraper --zip-file fileb://lambda.zip --handler main.handler
