--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,10 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - run: pip install -r requirements.txt --target ./
+      - run: pip install -r requirements.txt --target .
 
       - name: Zip Python Code
-        run: zip -r lambda.zip .
+        run: zip -r lambda.zip *
 
       - name: Update Lambda Function
         run: aws lambda update-function-code --function-name github-trending-scraper --zip-file fileb://lambda.zip
