--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,6 +1,12 @@
 name: CodeQL Analysis
-on: [push, pull_request]
-  workflow_dispatch:
+
+on:
+  push:
+    branches: [main, dev]
+  pull_request:
+    branches: [main, dev]
+  schedule:
+    - cron: "0 3 * * 0"
 
 permissions:
   contents: read
